// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown /> Disabled story renders snapshot 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root MuiButton-text css-198tp8o Mui-disabled Mui-disabled"
  disabled=""
  label="Click Target"
  tabindex="-1"
  type="button"
>
  <span
    class="MuiButton-label"
  >
    <span
      class="css-1sjvubj"
    >
      Click Target
    </span>
    <div
      class="css-jbvua0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root css-dkgei6"
        data-jest-file-name="IconChevronDownSmall.svg"
        data-jest-svg-name="IconChevronDownSmall"
        data-testid="IconChevronDownSmall"
        fillcontrast="white"
        focusable="false"
        viewBox="0 0 14 14"
      />
    </div>
  </span>
</button>
`;

exports[`<Dropdown /> MultipleSelect story renders snapshot 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root MuiButton-text css-mut8j3"
  label="Click Target"
  tabindex="0"
  type="button"
>
  <span
    class="MuiButton-label"
  >
    <span
      class="css-1sjvubj"
    >
      Click Target
    </span>
    <div
      class="css-jbvua0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root css-dkgei6"
        data-jest-file-name="IconChevronDownSmall.svg"
        data-jest-svg-name="IconChevronDownSmall"
        data-testid="IconChevronDownSmall"
        fillcontrast="white"
        focusable="false"
        viewBox="0 0 14 14"
      />
    </div>
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</button>
`;

exports[`<Dropdown /> MultipleSelectWithButtons story renders snapshot 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root MuiButton-text css-mut8j3"
  label="Click Target"
  tabindex="0"
  type="button"
>
  <span
    class="MuiButton-label"
  >
    <span
      class="css-1sjvubj"
    >
      Click Target
    </span>
    <div
      class="css-jbvua0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root css-dkgei6"
        data-jest-file-name="IconChevronDownSmall.svg"
        data-jest-svg-name="IconChevronDownSmall"
        data-testid="IconChevronDownSmall"
        fillcontrast="white"
        focusable="false"
        viewBox="0 0 14 14"
      />
    </div>
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</button>
`;

exports[`<Dropdown /> MultipleSelectWithIsTriggerChangeOnOptionClick story renders snapshot 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root MuiButton-text css-mut8j3"
  label="Click Target"
  tabindex="0"
  type="button"
>
  <span
    class="MuiButton-label"
  >
    <span
      class="css-1sjvubj"
    >
      Click Target
    </span>
    <div
      class="css-jbvua0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root css-dkgei6"
        data-jest-file-name="IconChevronDownSmall.svg"
        data-jest-svg-name="IconChevronDownSmall"
        data-testid="IconChevronDownSmall"
        fillcontrast="white"
        focusable="false"
        viewBox="0 0 14 14"
      />
    </div>
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</button>
`;

exports[`<Dropdown /> MultipleSelectWithSearch story renders snapshot 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root MuiButton-text css-mut8j3"
  label="Click Target"
  tabindex="0"
  type="button"
>
  <span
    class="MuiButton-label"
  >
    <span
      class="css-1sjvubj"
    >
      Click Target
    </span>
    <div
      class="css-jbvua0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root css-dkgei6"
        data-jest-file-name="IconChevronDownSmall.svg"
        data-jest-svg-name="IconChevronDownSmall"
        data-testid="IconChevronDownSmall"
        fillcontrast="white"
        focusable="false"
        viewBox="0 0 14 14"
      />
    </div>
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</button>
`;

exports[`<Dropdown /> MultipleSelectWithSearchLoadingIndicator story renders snapshot 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root MuiButton-text css-mut8j3"
  label="Click Target"
  tabindex="0"
  type="button"
>
  <span
    class="MuiButton-label"
  >
    <span
      class="css-1sjvubj"
    >
      Click Target
    </span>
    <div
      class="css-jbvua0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root css-dkgei6"
        data-jest-file-name="IconChevronDownSmall.svg"
        data-jest-svg-name="IconChevronDownSmall"
        data-testid="IconChevronDownSmall"
        fillcontrast="white"
        focusable="false"
        viewBox="0 0 14 14"
      />
    </div>
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</button>
`;

exports[`<Dropdown /> MultipleSelectWithSearchNoOptionsText story renders snapshot 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root MuiButton-text css-mut8j3"
  label="Click Target"
  tabindex="0"
  type="button"
>
  <span
    class="MuiButton-label"
  >
    <span
      class="css-1sjvubj"
    >
      Click Target
    </span>
    <div
      class="css-jbvua0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root css-dkgei6"
        data-jest-file-name="IconChevronDownSmall.svg"
        data-jest-svg-name="IconChevronDownSmall"
        data-testid="IconChevronDownSmall"
        fillcontrast="white"
        focusable="false"
        viewBox="0 0 14 14"
      />
    </div>
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</button>
`;

exports[`<Dropdown /> SearchWithOnClose story renders snapshot 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root MuiButton-text css-mut8j3"
  label="Click Target"
  tabindex="0"
  type="button"
>
  <span
    class="MuiButton-label"
  >
    <span
      class="css-1sjvubj"
    >
      Click Target
    </span>
    <div
      class="css-jbvua0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root css-dkgei6"
        data-jest-file-name="IconChevronDownSmall.svg"
        data-jest-svg-name="IconChevronDownSmall"
        data-testid="IconChevronDownSmall"
        fillcontrast="white"
        focusable="false"
        viewBox="0 0 14 14"
      />
    </div>
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</button>
`;

exports[`<Dropdown /> SingleSelect story renders snapshot 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root MuiButton-text css-mut8j3"
  label="Click Target"
  tabindex="0"
  type="button"
>
  <span
    class="MuiButton-label"
  >
    <span
      class="css-1sjvubj"
    >
      Click Target
    </span>
    <div
      class="css-jbvua0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root css-dkgei6"
        data-jest-file-name="IconChevronDownSmall.svg"
        data-jest-svg-name="IconChevronDownSmall"
        data-testid="IconChevronDownSmall"
        fillcontrast="white"
        focusable="false"
        viewBox="0 0 14 14"
      />
    </div>
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</button>
`;

exports[`<Dropdown /> SingleSelectWithSearch story renders snapshot 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root MuiButton-text css-mut8j3"
  label="Click Target"
  tabindex="0"
  type="button"
>
  <span
    class="MuiButton-label"
  >
    <span
      class="css-1sjvubj"
    >
      Click Target
    </span>
    <div
      class="css-jbvua0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root css-dkgei6"
        data-jest-file-name="IconChevronDownSmall.svg"
        data-jest-svg-name="IconChevronDownSmall"
        data-testid="IconChevronDownSmall"
        fillcontrast="white"
        focusable="false"
        viewBox="0 0 14 14"
      />
    </div>
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</button>
`;

exports[`<Dropdown /> Test story renders snapshot 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root MuiButton-text css-mut8j3"
  data-testid="dropdown"
  label="Click Target"
  tabindex="0"
  type="button"
>
  <span
    class="MuiButton-label"
  >
    <span
      class="css-1sjvubj"
    >
      Click Target
    </span>
    <div
      class="css-jbvua0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root css-dkgei6"
        data-jest-file-name="IconChevronDownSmall.svg"
        data-jest-svg-name="IconChevronDownSmall"
        data-testid="IconChevronDownSmall"
        fillcontrast="white"
        focusable="false"
        viewBox="0 0 14 14"
      />
    </div>
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</button>
`;
